إصلاح عرض المعاينة في تفاصيل أمر التصنيع وتحديث منشئ أمر التصنيع
- إصلاح عرض 'معاينة طرف العميل' في صفحة تفاصيل أمر التصنيع
- تحديث حقل 'منشئ أمر التصنيع' ليعرض منشئ الطلب الأصلي
- نقل ملف unified_status_tags.py إلى orders/templatetags/
- تحديث قالب تفاصيل العميل لاستخدام unified_status_tags

--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -349,10 +349,9 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <span class="badge {% if order.tracking_status == 'pending' %}bg-warning
-                                                   {% elif order.tracking_status == 'delivered' %}bg-success
-                                                   {% else %}bg-info{% endif %}">
-                                            {{ order.get_tracking_status_display }}
+                                        <span class="badge {{ order.get_display_status_badge_class }}">
+                                            <i class="{{ order.get_display_status_icon }} me-1"></i>
+                                            {{ order.get_display_status_text }}
                                         </span>
                                     </td>
                                     <td>{{ order.total_amount }} {{ currency_symbol }}</td>
